<resources>
    <string name="font1">casual</string>
    <string name="font2">serif</string>
    <string name="app_name">PFC</string>
    <string name="activity_label">PFC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="propuesta_ok">Propuesta enviada, muchas gracias por su sugerencia.</string>
    <string name="propuesta_err">Error al enviar la propuesta</string>
    <string name="email_err">Error en el formato del Email</string>
    <string name="empty_pass_err">Error contraseña vacía</string>
    <string name="empty_prop_err">Error propuesta vacía</string>
    <string name="login_pass_distintas_err">Error: Las contraseñas introducidas no coinciden.</string>
    <string name="login_min_pass_length_err">Error: Longitud mínima de 8 carácteres</string>
    <string name="sin_proyectos">No hay proyectos</string>
    <string name="mis_proyectos">Mis Proyectos</string>
    <string name="sugerir_proyecto">Sugerir un Proyecto</string>
    <string name="proyectos_anteriores">Proyectos Anteriores</string>
    <string name="documentos">Documentos</string>
    <string name="inicio">Inicio</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="mensaje_inicio">Bienvenido a la aplicación de gestión de los proyectos de fin de ciclo del CIFP Avilés.</string>
    <string name="mensaje_inicio2">Navegue por los menús para más información.</string>
    <string name="logo">Logotipo del CIFP Avilés.</string>
    <string name="intro_contra">Introduzca su email y contraseña para acceder.</string>
    <string name="pulse_login">Acceder</string>
    <string name="pulse_salir">Salir</string>
    <string name="cambia_contra">Es su primer acceso. Debe modificar su contraseña para acceder.</string>
    <string name="email">Email</string>
    <string name="contra">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="nif">NIF</string>
    <string name="telefono">Teléfono</string>
    <string name="ciclo">Ciclo FP</string>
    <string name="tipo">Tipo de documento</string>
    <string name="desc_docu">Descripción del documento</string>
    <string name="propuesta">Describa el proyecto:</string>
    <string name="n_contra">Nueva Contraseña</string>
    <string name="r_contra">Repita Contraseña</string>
    <string name="sugerir_txt">Las propuestas que nos envían son muy útiles para generar ideas de proyectos para nuestros alumnos.</string>
    <string name="sugerir_txt1">Rellene los cambios siguientes para hacernos llegar su propuesta.</string>
    <string name="intro_nombre">Introduzca su nombre (opcional)</string>
    <string name="intro_email">Introduzca su email (obligatorio)</string>
    <string name="intro_propuesta">Intente desarrollar todo lo que pueda su propuesta</string>
    <string name="intro_nif">00000000D</string>
    <string name="intro_telefono">666666666</string>
    <string name="obl">Obligatorio</string>
    <string name="opc">Opcional</string>
    <string name="enviar">Enviar</string>
    <string name="anteproyecto">Anteproyecto</string>
    <string name="alumno">Datos del alumno</string>
    <string name="matricula">Datos de la matrícula</string>
    <string name="docentes_mensajes">Docentes, mensajes y evaluación del Proyecto</string>
    <string name="documentos_proyecto">Documentos del proyecto</string>
    <string name="rubricas">Rúbricas y evaluación</string>
    <string name="titulo_proyecto">Título del proyecto</string>
    <string name="intro_nombre_proyecto">Introduzca el título descriptivo del Proyecto</string>
    <string name="desc_proyecto">Descripción del proyecto</string>
    <string name="intro_desc_proyecto">Describa el proyecto con todo detalle</string>
    <string name="requisitos_proyecto">Requisitos funcionales del proyecto</string>
    <string name="intro_requisitos_proyecto">Introduzca las funcionalidades mínimas a implementar en el proyecto</string>
    <string name="modulos_proyecto">Módulos del ciclo relacionados con el proyecto</string>
    <string name="intro_modulos_proyecto">Indique los módulos directamente relacionados con el proyecto así como las tecnologías a usar no desarrolladas en el ciclo</string>
    <string name="msg_datos_personales">Para poder continuar editando su proyecto debe rellenar primero sus datos personales.</string>
    <string name="tutor_individual">Tutor individual</string>
    <string name="envia_msm_tutor">Envía mensaje al tutor</string>
    <string name="nota_previa">Nota previa</string>
    <string name="comentario_nota_previa">Comentario nota previa</string>
    <string name="tutor_colectivo">Tutor colectivo</string>
    <string name="estado">Estado</string>
    <string name="nota_final">Nota Final</string>
    <string name="documento">Documento</string>
    <string name="link">Link</string>
    <string name="publico">Publico</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="tipo2">Tipo</string>
    <string name="abrir">Abrir o descargar</string>
    <string name="modulo">Modulo</string>
    <string name="tieneUC">Tiene UC</string>
    <string name="valoracion_anteproyecto">Valor.Anteproyecto</string>
    <string name="comentario_valor_ante">Comentario del docente</string>
    <string name="agrege_documento">Agregar documentos al proyecto</string>
    <string name="email_tutor">Enviar un correo electrónico al tutor</string>
    <string name="tipo_otro">Si otro</string>
    <string name="tipo_proyecto">Tipo de proyecto</string>
    <string name="tipo_si_otro">Tipo si eligió otro</string>
    <string name="msg_tutor_individual">Tutor Individual pendiente de asignación</string>
    <string name="fichero">Fichero</string>
    <string name="intro_link">http://www.servidor.com/ruta</string>
    <string name="agregar">Agregar</string>
    <string name="rubrica">Grupo: Rúbrica</string>
    <string name="Porcentaje">% s/total</string>
    <string name="valor_tut_indiv">Tutor Individual: Valoración y comentario</string>
    <string name="valor_tut_col">Tutor Colectivo: Valoración y comentario</string>
    <string name="detalles">Ver detalles de la rúbrica</string>
    <string name="desc_exc">Requisitos para valoración EXCELENTE</string>
    <string name="desc_bien">Requisitos para valoración BIEN</string>
    <string name="desc_reg">Requisitos para valoración REGULAR</string>
    <string name="desc_mal">Requisitos para valoración MAL</string>
    <string name="cerrar">Cerrar la pantalla</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje a enviar:</string>
    <string name="intro_mensaje">Introduzca el mensaje que desea enviar al tutor/a</string>
    <string name="intro_asunto">Introduzca asunto</string>
    <string name="sin_docs_documentos">Actualmente no hay documentos para este ciclo en el servidor.</string>
    <string name="sin_proyectos_anteriores">No hay proyectos anteriores abierto al público aún. Inténtelo más adelante.</string>
    <string name="sin_docs_proyecto">Actualmente no hay documentos cargados para este proyecto.</string>
    <string name="salir">Salir</string>
    <string name="home">Inicio</string>
    <string name="msg_acceso_no_alumno">Intento de acceso por un usuario que no es un alumno. El acceso está restringido al alumnado del centro habilitado.</string>
    <string name="msg_acceso_err">Error de conexion para autenticación del usuario. Vuelva a intentarlo.</string>
    <string name="msg_user_pass_err">Usuario o contraseña no válido.</string>
    <string name="msg_err_modif_contra">Error al intentar modificar la contraseña. Posible error de conexión.</string>
    <string name="err_conexion">\"Error de conexion con el servidor: \"</string>
    <string name="sin_ciclos">No hay ciclos cargados en el servidor. Inténtelo en otro momento</string>
    <string name="generales">Generales</string>
    <string name="sin_documentos">No hay documentos.</string>
    <string name="fatal_err">Error fatal. No se han podido obtener datos del servidor</string>
    <string name="remember_me">Recordar credenciales</string>
    <string name="msg_user_not_found">No se ha encontrado al alumno en la BBDD</string>
    <string name="msg_acceso_user">Error de acceso a los datos del usuario</string>
    <string name="msg_connected">Usuario conectado</string>
    <string name="msg_err_propuesta">Error al enviar su propuesta.</string>
    <string name="msg_err_docs">Error de conexión, no hemos podido obtener los documentos.</string>
    <string name="msg_nombre_pdte">Nombre pdte asignación</string>
    <string name="sin_datos_proy">"Ha sido imposible obtener los datos del proyecto. "</string>
    <string name="msg_data_alumno">Los datos mínimos del alumno son: nombre, primer apellido y NIF. Rellénelos para poder continuar.</string>
    <string name="cargando">Se están cargando los datos para mostrar el proyecto, espere unos instantes.</string>
    <string name="msg_err_tipos">No se han podido obtener los tipos de proyectos.</string>
    <string name="cambiado">Datos modificados.</string>
    <string name="msg_err_cambios">Ha habido un error al intentar guardar los cambios.</string>
    <string name="msg_err_docentes">Error al recibir lo datos de los docentes.</string>
    <string name="msg_msg_enviado">El email ha sido enviado.</string>
    <string name="pendiente">Pendiente</string>
    <string name="pdte">Pdte</string>
    <string name="msg_err_estados">Error al cargar los estados del proyecto.</string>
    <string name="estado_no_iniciado">No Iniciado</string>
    <string name="msg_err_rub">No se han podido obtener las rúbricas del ciclo que evalúan el proyecto.</string>
    <string name="pdteEval">PdteEvaluar</string>
    <string name="insuficiente">Insuficiente</string>
    <string name="regular">Regular</string>
    <string name="bien">Bien</string>
    <string name="excelente">Excelente</string>
    <string name="pte_comentario">Pte Comentario</string>
    <string name="msg_saved_mat">Datos de las matrículas guardados.</string>
    <string name="noapto">No Apto</string>
    <string name="apto">Apto</string>
    <string name="msg_err_matricula">Error al intentar actualizar los datos de la matrícula.</string>
    <string name="msg_err_doc_noName">Error. Debe rellenar el campo del nombre del documento.</string>
    <string name="msg_err_doc_noFile">No se ha seleccionado ningún fichero.</string>
    <string name="msg_err_doc_noLink">Debe rellenar el campo del link para poder continuar</string>
    <string name="msg_err_doc_badLink">El formato del link es incorrecto. Formato correcto \n http://www.dominio.com/algo/algo/etc</string>
    <string name="msg_doc_down">Documento descargado. El documento se encuentra en la carpeta Download de su dispositivo con el nombre </string>
    <string name="msg_err_delete">Error al intentar borrar el documento</string>
    <string name="msg_doc_eliminado">Documento eliminado.</string>
    <string name="msg_err_doc">Error al intentar guardar el documento</string>
    <string name="msg_doc_added">Documento agregado a su proyecto.</string>
    <string name="descargar_fichero">Descargar fichero</string>
    <string name="ir_link">Ir al link</string>
    <string name="msg_ok_modif_contra">Su contraseña ha sido modificada. Recuerdela</string>
    <string name="msg_err_noDoc">Debe seleccionar primero un fichero para poder subirlo.</string>
    <string name="no_acceso_fichero">No podrá agregar ficheros al proyecto</string>
    <string name="msg_adding_doc">El fichero comenzará a subirse al servidor. En función de su tamaño puede que tarde. Espera por el mensaje de finde transmisión.</string>
</resources>