<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/login"
        android:icon="@drawable/login"
        android:title="@string/login"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        app:showAsAction="always">
    </item>
    <item android:id="@+id/exit"
        android:icon="@drawable/exit1"
        android:title="@string/salir"
        app:showAsAction="always">
    </item>
    <item android:id="@+id/home"
        android:icon="@drawable/inicio"
        android:title="@string/home"
        app:showAsAction="always">
    </item>
</menu>