<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fondo"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font1"
            android:text="@string/desc_exc"/>
        <TextView
            android:id="@+id/txtDescExc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font2"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font1"
            android:text="@string/desc_bien"/>
        <TextView
            android:id="@+id/txtDescBien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font2"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font1"
            android:text="@string/desc_reg"/>
        <TextView
            android:id="@+id/txtDescReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font2"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font1"
            android:text="@string/desc_mal"/>
        <TextView
            android:id="@+id/txtDescMal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font2"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>