<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lblDocumentos1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lblDocumento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/documento"
            android:fontFamily="@string/font1"
            android:layout_weight="4"/>
        <EditText
            android:id="@+id/edtDocumento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/documento"
            android:fontFamily="@string/font2"
            android:layout_weight="10"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lblDocumentos2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lblTipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tipo2"
            android:fontFamily="@string/font1"
            android:layout_weight="8"/>
        <TextView
            android:id="@+id/lblPublico"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/publico"
            android:fontFamily="@string/font1"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/lblLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/link"
            android:fontFamily="@string/font1"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/lblGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/guardar"
            android:fontFamily="@string/font1"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/lblBorrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/borrar"
            android:fontFamily="@string/font1"
            android:layout_weight="3"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/txtDocumentos2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spnTipo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:fontFamily="@string/font1"
            android:layout_weight="9"/>
        <CheckBox
            android:id="@+id/chkPublico"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@string/font1"
            android:enabled="false"
            android:layout_weight="2"/>
        <ImageButton
            android:id="@+id/btnLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@android:drawable/stat_sys_download"
            android:layout_weight="3"
            android:contentDescription="@string/abrir" />
        <ImageButton
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@android:drawable/ic_menu_save"
            android:layout_weight="3"
            android:contentDescription="@string/guardar" />
        <ImageButton
            android:id="@+id/btnBorrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@android:drawable/ic_menu_delete"
            android:layout_weight="3"
            android:contentDescription="@string/borrar" />
    </LinearLayout>
</LinearLayout>
