<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondo"
        tools:context=".fragmentos.Sugerir">

        <TextView
            android:id="@+id/mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@string/font2"
            android:gravity="center"
            android:text="@string/sugerir_proyecto"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@id/mensaje2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mensaje2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="12dp"
            android:text="@string/sugerir_txt"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:fontFamily="@string/font1"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/marco_sugerir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mensaje"/>

        <LinearLayout
            android:id="@+id/marco_sugerir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mensaje"
            android:background="@color/borde2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cabecera1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_margin="3dp"
                android:text="@string/sugerir_txt1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:gravity="center" />

            <LinearLayout
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="3dp"
                android:background="@color/fondo2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="3dp">
                    <TextView
                        android:id="@+id/txtNombre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:fontFamily="@string/font1"
                        android:layout_weight="3"/>
                    <EditText
                        android:id="@+id/edtNombre"
                        android:inputType="textCapWords"
                        android:maxLength="200"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:hint="@string/intro_nombre"
                        android:layout_weight="12"
                        android:importantForAutofill="no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="3dp">

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:fontFamily="@string/font1"
                        android:layout_weight="3"/>
                    <EditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/edtEmail"
                        android:maxLength="50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:hint="@string/intro_email"
                        android:layout_weight="12"
                        android:importantForAutofill="no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="3dp">

                    <TextView
                        android:id="@+id/txtCicloId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ciclo"
                        android:fontFamily="@string/font1"
                        android:layout_weight="3"/>
                    <Spinner
                        android:id="@+id/spnCicloId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_weight="12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="3dp"
                    android:paddingTop="6dp">
                    <TextView
                        android:id="@+id/txtPropuesta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/propuesta"
                        android:fontFamily="@string/font1"/>
                    <EditText
                        android:inputType="textMultiLine"
                        android:id="@+id/edtPropuesta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:scrollbars="vertical"
                        android:minLines="3"
                        android:hint="@string/intro_propuesta"
                        android:importantForAutofill="no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="3dp"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enviar"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>